--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
           alt="Vito's image"
         />
       </div>
-      <h2 class="header-title w-50 ml-auto">RESUME</h2>
+      <h2 class="header-title w-50-gutter ml-auto">RESUME</h2>
     </div>
     <div class="intro">
       <div class="container">
-        <p class="w-50 ml-auto">
+        <p class="w-50-gutter ml-auto">
           I'm Vito, a UI Designer with 5+ years of experience. I create visually
           appealing interfaces for web and mobile apps. Proficient in Sketch,
           Adobe XD, Figma, HTML, CSS, and JavaScript. I enjoy collaborating with
@@ -37,7 +37,7 @@
     <ul class="section container mt-20">
       <li class="w-50">
         <h3 class="info-title">Vito Evans</h3>
-        <ul class="mt-4">
+        <ul class="mt-4 info-contact">
           <li><a href="#">456 Walnut Avenue, Someville, USA</a></li>
           <li class="mt-2"><a href="#">+1 123 456 7890</a></li>
           <li class="mt-2"><a href="#">info@hexschool.com</a></li>
@@ -100,23 +100,29 @@
     </ul>
 
     <div class="footer text-center mt-40 py-16">
-      <div class="container">
-        <a href="#" class="mr-10"
-          ><img
-            src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023week1/fb.png"
-            alt="fb icon"
-        /></a>
-        <a href="#" class="mr-10"
-          ><img
-            src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023week1/instagram.png"
-            alt="instagram icon"
-        /></a>
-        <a href="#"
-          ><img
-            src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023week1/line.png"
-            alt="line icon"
-        /></a>
-      </div>
+      <ul class="container">
+        <li class="social-icon mr-10">
+          <a href="#"
+            ><img
+              src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023week1/fb.png"
+              alt="fb icon"
+          /></a>
+        </li>
+        <li class="social-icon mr-10">
+          <a href="#"
+            ><img
+              src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023week1/instagram.png"
+              alt="instagram icon"
+          /></a>
+        </li>
+        <li class="social-icon">
+          <a href="#"
+            ><img
+              src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023week1/line.png"
+              alt="line icon"
+          /></a>
+        </li>
+      </ul>
     </div>
   </body>
 </html>
