更正class 名稱順序，共用的 class 性質放自訂的 class 名稱後面

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <ul class="section container mt-20">
       <li class="w-50">
         <h3 class="info-title">Vito Evans</h3>
-        <ul class="mt-4 info-contact">
+        <ul class="info-contact mt-4">
           <li><a href="#">456 Walnut Avenue, Someville, USA</a></li>
           <li class="mt-2"><a href="#">+1 123 456 7890</a></li>
           <li class="mt-2"><a href="#">info@hexschool.com</a></li>
